hover and footer changes

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
       <nav
         class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0"
       >
-        <a href="" class="navbar-brand p-0">
+        <a href="index.html" class="navbar-brand p-0">
           <!-- <h1 class="text-primary"><i class="fas fa-hand-holding-water me-3"></i>Acuas</h1> -->
           <img src="img/logo.png" alt="Logo" />
         </a>
@@ -85,13 +85,13 @@
       <div class="container-fluid bg-breadcrumb">
         <div class="container text-center py-5" style="max-width: 900px">
           <h4
-            class="text-white display-4 mb-4 wow fadeInDown"
+            class="text-white display-4 mb-4 wow fadeInDown elem_hover"
             data-wow-delay="0.1s"
           >
             About Us
           </h4>
           <ol
-            class="breadcrumb d-flex justify-content-center mb-0 wow fadeInDown"
+            class="breadcrumb d-flex justify-content-center mb-0 wow fadeInDown elem_hover"
             data-wow-delay="0.3s"
           >
             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
@@ -111,7 +111,7 @@
       <div class="container py-5">
         <div class="row g-5">
           <div class="col-xl-6 wow fadeInLeft" data-wow-delay="0.2s">
-            <div class="about-img rounded h-100">
+            <div class="about-img rounded h-100 elem_hover">
               <img
                 src="img/aboutus.png"
                 class="img-fluid rounded h-100 w-100"
@@ -123,11 +123,11 @@
           </div>
           <div class="col-xl-6 wow fadeInRight" data-wow-delay="0.2s">
             <div class="about-item">
-              <h4 class="text-secondary text-uppercase">About Us</h4>
-              <h3 class="display-6 mb-3">
+              <h4 class="text-secondary text-uppercase elem_hover">About Us</h4>
+              <h3 class="display-6 mb-3 elem_hover">
                 Your Trusted Partner in Specialty Chemicals.
               </h3>
-              <p class="mb-4 text-justify">
+              <p class="mb-4 text-justify elem_hover">
                 Founded with a commitment to advancing
                 <b>chemical innovation, DCA Fine Chem Private Limited</b> has
                 become a trusted and growing force in the fine and specialty
@@ -140,14 +140,14 @@
                   specialty solutions.</b
                 >
               </p>
-              <p class="mb-4 text-justify">
+              <p class="mb-4 text-justify elem_hover">
                 Backed by a strong foundation of innovation, precision, and
                 commitment to excellence, our solutions empower industries to
                 achieve optimal performance and sustainability. We bring
                 <b>world-class chemical expertise</b> right to your
                 doorstep—efficiently, safely, and on time.
               </p>
-              <p class="mb-4 text-justify">
+              <p class="mb-4 text-justify elem_hover">
                 At DCA, we blend scientific excellence with ethical
                 responsibility to create value for our customers and partners
                 worldwide.
@@ -167,8 +167,8 @@
           data-wow-delay="0.2s"
           style="max-width: 800px"
         >
-          <h4 class="text-uppercase text-secondary">Our Core Values</h4>
-          <p class="b-3 text-white" style="font-size: larger">
+          <h4 class="text-uppercase text-secondary elem_hover">Our Core Values</h4>
+          <p class="b-3 text-white elem_hover" style="font-size: larger">
             These values guide our actions, define our culture, and ensure that
             we remain aligned with the expectations of our customers, partners,
             and the environment.
@@ -176,7 +176,7 @@
         </div>
         <div class="row g-5">
           <div
-            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp"
+            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp elem_hover"
             data-wow-delay="0.2s"
           >
             <div class="counter-item">
@@ -187,7 +187,7 @@
             </div>
           </div>
           <div
-            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp"
+            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp elem_hover"
             data-wow-delay="0.4s"
           >
             <div class="counter-item">
@@ -198,7 +198,7 @@
             </div>
           </div>
           <div
-            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp"
+            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp elem_hover"
             data-wow-delay="0.6s"
           >
             <div class="counter-item">
@@ -209,7 +209,7 @@
             </div>
           </div>
           <div
-            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp"
+            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp elem_hover"
             data-wow-delay="0.8s"
           >
             <div class="counter-item">
@@ -232,13 +232,13 @@
           data-wow-delay="0.2s"
           style="max-width: 800px"
         >
-          <h4 class="text-uppercase text-secondary">Mission & Vision</h4>
-          <h3 class="display-6 text-capitalize mb-3">
+          <h4 class="text-uppercase text-secondary elem_hover">Mission & Vision</h4>
+          <h3 class="display-6 text-capitalize mb-3 elem_hover">
            The Guiding Principles of Our Company: Vision and Mission
           </h3>
         </div>
         <div class="row">
-          <div class="col-md-6 col-lg-6 col-xl-6 wow fadeInUp"
+          <div class="col-md-6 col-lg-6 col-xl-6 wow fadeInUp elem_hover"
             data-wow-delay="0.2s" >
             <div class="team-item p-4">
               <div class="team-inner rounded">
@@ -255,7 +255,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-6 col-xl-6 wow fadeInUp"
+          <div class="col-md-6 col-lg-6 col-xl-6 wow fadeInUp elem_hover"
             data-wow-delay="0.4s" >
             <div class="team-item p-4">
               <div class="team-inner rounded">
@@ -286,13 +286,13 @@
           data-wow-delay="0.2s"
           style="max-width: 800px"
         >
-          <h4 class="text-uppercase text-secondary">Why Choose Us</h4>
-          <h3 class="display-6 text-capitalize mb-3">
+          <h4 class="text-uppercase text-secondary elem_hover">Why Choose Us</h4>
+          <h3 class="display-6 text-capitalize mb-3 elem_hover">
             Our Commitment to Quality, Service, and Partnerships
           </h3>
         </div>
         <div class="row g-4 justify-content-center">
-          <div class="col-lg-3 wow fadeInUp" data-wow-delay="0.2s">
+          <div class="col-lg-3 wow fadeInUp elem_hover" data-wow-delay="0.2s">
             <div class="blog-item">
               <div class="blog-img">
                 <img
@@ -308,7 +308,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 wow fadeInUp" data-wow-delay="0.4s">
+          <div class="col-lg-3 wow fadeInUp elem_hover" data-wow-delay="0.4s">
             <div class="blog-item">
               <div class="blog-img">
                 <img
@@ -324,7 +324,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 wow fadeInUp" data-wow-delay="0.6s">
+          <div class="col-lg-3 wow fadeInUp elem_hover" data-wow-delay="0.6s">
             <div class="blog-item">
               <div class="blog-img">
                 <img
@@ -340,7 +340,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 wow fadeInUp" data-wow-delay="0.6s">
+          <div class="col-lg-3 wow fadeInUp elem_hover" data-wow-delay="0.6s">
             <div class="blog-item">
               <div class="blog-img">
                 <img
@@ -364,7 +364,7 @@
 
     <!-- Footer Start -->
     <div
-      class="container-fluid footer py-2 wow fadeIn counter"
+      class="container-fluid footer py-2 wow fadeIn counter bg-image"
       data-wow-delay="0.2s"
     >
       <div class="container py-5">
@@ -374,22 +374,22 @@
               class="d-flex align-items-center justify-content-center justify-content-lg-end"
             >
               <a
-                class="btn btn-secondary btn-md-square rounded-circle me-3"
+                class="btn btn-secondary btn-md-square rounded-circle me-3 elem_hover"
                 href=""
                 ><i class="fab fa-facebook-f"></i
               ></a>
               <a
-                class="btn btn-secondary btn-md-square rounded-circle me-3"
+                class="btn btn-secondary btn-md-square rounded-circle me-3 elem_hover"
                 href=""
                 ><i class="fab fa-twitter"></i
               ></a>
               <a
-                class="btn btn-secondary btn-md-square rounded-circle me-3"
+                class="btn btn-secondary btn-md-square rounded-circle me-3 elem_hover"
                 href=""
                 ><i class="fab fa-instagram"></i
               ></a>
               <a
-                class="btn btn-secondary btn-md-square rounded-circle me-0"
+                class="btn btn-secondary btn-md-square rounded-circle me-0 elem_hover"
                 href=""
                 ><i class="fab fa-linkedin-in"></i
               ></a>
@@ -405,8 +405,8 @@
           <div class="col-md-6 col-lg-6 col-xl-3">
             <div class="footer-item d-flex flex-column">
               <div class="footer-item">
-                <h3 class="text-white mb-4">DCA</h3>
-                <p class="mb-3 text-justify">
+                <h3 class="text-white mb-4 elem_hover">DCA</h3>
+                <p class="mb-3 text-justify text-white elem_hover">
                   Backed by a strong foundation of innovation, precision, and
                   commitment to excellence, our solutions empower industries to
                   achieve optimal performance and sustainability. We bring
@@ -418,31 +418,42 @@
           </div>
           <div class="col-md-6 col-lg-6 col-xl-3">
             <div class="footer-item d-flex flex-column ms-5">
-              <h4 class="text-white mb-4">Explore</h4>
-              <a href="#"><i class="fas fa-angle-right me-2"></i>Home</a>
-              <a href="#"><i class="fas fa-angle-right me-2"></i> About</a>
-              <a href="#"><i class="fas fa-angle-right me-2"></i>services</a>
-              <a href="#"><i class="fas fa-angle-right me-2"></i> Contact</a>
+              <h4 class="text-white mb-4 elem_hover">Explore</h4>
+              <a href="#"
+                ><i class="fas fa-angle-right me-2 text-white elem_hover"></i
+                ><span class="text-white">Home</span></a
+              >
+              <a href="#"
+                ><i class="fas fa-angle-right me-2 text-white elem_hover"></i
+                ><span class="text-white">About</span></a
+              >
+              <a href="#"
+                ><i class="fas fa-angle-right me-2 text-white elem_hover"></i
+                ><span class="text-white">services</span></a
+              >
+              <a href="#"
+                ><i class="fas fa-angle-right me-2 text-white elem_hover"></i
+                ><span class="text-white"> Contact</span></a
+              >
             </div>
           </div>
           <div class="col-md-6 col-lg-6 col-xl-3">
             <div class="footer-item d-flex flex-column">
-              <h4 class="text-white mb-4">Contact Info</h4>
+              <h4 class="text-white mb-4 elem_hover">Contact Info</h4>
               <a href="#"
-                ><i class="fa fa-map-marker-alt me-2"></i> 123 Street, New York,
-                USA</a
+                ><i class="fa fa-map-marker-alt me-2 text-white"></i
+                ><span class="text-white">
+                  1DCA Fine Chem Pvt. Ltd. (Plot No. N-17, MIDC, Tarapur,
+                  Boisar, Tal.&DistPalghar 401506 )
+                </span></a
               >
               <a href="mailto:info@example.com"
-                ><i class="fas fa-envelope me-2"></i> info@example.com</a
-              >
-              <a href="mailto:info@example.com"
-                ><i class="fas fa-envelope me-2"></i> info@example.com</a
+                ><i class="fas fa-envelope me-2 text-white"></i
+                ><span class="text-white">info@dcafinechem.com</span></a
               >
               <a href="tel:+012 345 67890"
-                ><i class="fas fa-phone me-2"></i> +012 345 67890</a
-              >
-              <a href="tel:+012 345 67890" class="mb-3"
-                ><i class="fas fa-print me-2"></i> +012 345 67890</a
+                ><i class="fas fa-phone me-2 text-white"></i
+                ><span class="text-white">+91-9860324431</span></a
               >
             </div>
           </div>
