--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
       <nav
         class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0"
       >
-        <a href="" class="navbar-brand p-0">
+        <a href="index.html" class="navbar-brand p-0">
           <!-- <h1 class="text-primary"><i class="fas fa-hand-holding-water me-3"></i>Acuas</h1> -->
           <img src="img/logo.png" alt="Logo" />
         </a>
@@ -85,13 +85,13 @@
       <div class="container-fluid bg-breadcrumb">
         <div class="container text-center py-5" style="max-width: 900px">
           <h4
-            class="text-white display-4 mb-4 wow fadeInDown"
+            class="text-white display-4 mb-4 wow fadeInDown elem_hover"
             data-wow-delay="0.1s"
           >
             Contact Us
           </h4>
           <ol
-            class="breadcrumb d-flex justify-content-center mb-0 wow fadeInDown"
+            class="breadcrumb d-flex justify-content-center mb-0 wow fadeInDown elem_hover"
             data-wow-delay="0.3s"
           >
             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
@@ -111,7 +111,7 @@
           <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.4s">
             <div class="row g-4">
               <div class="col-lg-6">
-                <div class="d-inline-flex rounded bg-white w-100 p-4">
+                <div class="d-inline-flex rounded bg-white w-100 p-4 elem_hover">
                   <i
                     class="fas fa-map-marker-alt fa-2x text-secondary me-4"
                   ></i>
@@ -122,7 +122,7 @@
                 </div>
               </div>
               <div class="col-lg-3 col-xl-3">
-                <div class="d-inline-flex rounded bg-white w-100 p-4">
+                <div class="d-inline-flex rounded bg-white w-100 p-4 elem_hover">
                   <i class="fas fa-envelope fa-2x text-secondary me-4"></i>
                   <div>
                     <h4>Mail Us</h4>
@@ -131,7 +131,7 @@
                 </div>
               </div>
               <div class="col-lg-3 col-xl-3">
-                <div class="d-inline-flex rounded bg-white w-100 p-4">
+                <div class="d-inline-flex rounded bg-white w-100 p-4 elem_hover">
                   <i class="fa fa-phone-alt fa-2x text-secondary me-4"></i>
                   <div>
                     <h4>Telephone</h4>
@@ -141,7 +141,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-12 h-100 wow fadeInUp" data-wow-delay="0.2s">
+          <div class="col-lg-12 h-100 wow fadeInUp elem_hover" data-wow-delay="0.2s">
             <div class="col-12">
               <div class="h-100 overflow-hidden">
                 <iframe
@@ -161,7 +161,7 @@
 
     <!-- Footer Start -->
     <div
-      class="container-fluid footer py-2 wow fadeIn counter"
+      class="container-fluid footer py-2 wow fadeIn counter bg-image"
       data-wow-delay="0.2s"
     >
       <div class="container py-5">
@@ -171,22 +171,22 @@
               class="d-flex align-items-center justify-content-center justify-content-lg-end"
             >
               <a
-                class="btn btn-secondary btn-md-square rounded-circle me-3"
+                class="btn btn-secondary btn-md-square rounded-circle me-3 elem_hover"
                 href=""
                 ><i class="fab fa-facebook-f"></i
               ></a>
               <a
-                class="btn btn-secondary btn-md-square rounded-circle me-3"
+                class="btn btn-secondary btn-md-square rounded-circle me-3 elem_hover"
                 href=""
                 ><i class="fab fa-twitter"></i
               ></a>
               <a
-                class="btn btn-secondary btn-md-square rounded-circle me-3"
+                class="btn btn-secondary btn-md-square rounded-circle me-3 elem_hover"
                 href=""
                 ><i class="fab fa-instagram"></i
               ></a>
               <a
-                class="btn btn-secondary btn-md-square rounded-circle me-0"
+                class="btn btn-secondary btn-md-square rounded-circle me-0 elem_hover"
                 href=""
                 ><i class="fab fa-linkedin-in"></i
               ></a>
@@ -202,8 +202,8 @@
           <div class="col-md-6 col-lg-6 col-xl-3">
             <div class="footer-item d-flex flex-column">
               <div class="footer-item">
-                <h3 class="text-white mb-4">DCA</h3>
-                <p class="mb-3 text-justify">
+                <h3 class="text-white mb-4 elem_hover">DCA</h3>
+                <p class="mb-3 text-justify text-white elem_hover">
                   Backed by a strong foundation of innovation, precision, and
                   commitment to excellence, our solutions empower industries to
                   achieve optimal performance and sustainability. We bring
@@ -215,31 +215,42 @@
           </div>
           <div class="col-md-6 col-lg-6 col-xl-3">
             <div class="footer-item d-flex flex-column ms-5">
-              <h4 class="text-white mb-4">Explore</h4>
-              <a href="#"><i class="fas fa-angle-right me-2"></i>Home</a>
-              <a href="#"><i class="fas fa-angle-right me-2"></i> About</a>
-              <a href="#"><i class="fas fa-angle-right me-2"></i>services</a>
-              <a href="#"><i class="fas fa-angle-right me-2"></i> Contact</a>
+              <h4 class="text-white mb-4 elem_hover">Explore</h4>
+              <a href="#"
+                ><i class="fas fa-angle-right me-2 text-white elem_hover"></i
+                ><span class="text-white">Home</span></a
+              >
+              <a href="#"
+                ><i class="fas fa-angle-right me-2 text-white elem_hover"></i
+                ><span class="text-white">About</span></a
+              >
+              <a href="#"
+                ><i class="fas fa-angle-right me-2 text-white elem_hover"></i
+                ><span class="text-white">services</span></a
+              >
+              <a href="#"
+                ><i class="fas fa-angle-right me-2 text-white elem_hover"></i
+                ><span class="text-white"> Contact</span></a
+              >
             </div>
           </div>
           <div class="col-md-6 col-lg-6 col-xl-3">
             <div class="footer-item d-flex flex-column">
-              <h4 class="text-white mb-4">Contact Info</h4>
+              <h4 class="text-white mb-4 elem_hover">Contact Info</h4>
               <a href="#"
-                ><i class="fa fa-map-marker-alt me-2"></i> 123 Street, New York,
-                USA</a
+                ><i class="fa fa-map-marker-alt me-2 text-white"></i
+                ><span class="text-white">
+                  1DCA Fine Chem Pvt. Ltd. (Plot No. N-17, MIDC, Tarapur,
+                  Boisar, Tal.&DistPalghar 401506 )
+                </span></a
               >
               <a href="mailto:info@example.com"
-                ><i class="fas fa-envelope me-2"></i> info@example.com</a
-              >
-              <a href="mailto:info@example.com"
-                ><i class="fas fa-envelope me-2"></i> info@example.com</a
+                ><i class="fas fa-envelope me-2 text-white"></i
+                ><span class="text-white">info@dcafinechem.com</span></a
               >
               <a href="tel:+012 345 67890"
-                ><i class="fas fa-phone me-2"></i> +012 345 67890</a
-              >
-              <a href="tel:+012 345 67890" class="mb-3"
-                ><i class="fas fa-print me-2"></i> +012 345 67890</a
+                ><i class="fas fa-phone me-2 text-white"></i
+                ><span class="text-white">+91-9860324431</span></a
               >
             </div>
           </div>
