--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <nav
         class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0"
       >
-        <a href="" class="navbar-brand p-0">
+        <a href="index.html" class="navbar-brand p-0">
           <!-- <h1 class="text-primary"><i class="fas fa-hand-holding-water me-3"></i>Acuas</h1> -->
           <img src="img/logo.png" alt="Logo" />
         </a>
@@ -147,14 +147,14 @@
           data-wow-delay="0.2s"
           style="max-width: 800px"
         >
-          <h4 class="text-uppercase text-secondary">Our Feature</h4>
-          <h1 class="display-6 text-capitalize mb-3">
+          <h4 class="text-uppercase text-secondary elem_hover">Our Feature</h4>
+          <h1 class="display-6 text-capitalize mb-3 elem_hover">
             Driven by Innovation, Backed by Excellence
           </h1>
         </div>
         <div class="row g-4">
           <div
-            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp"
+            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp elem_hover"
             data-wow-delay="0.2s"
           >
             <div class="feature-item p-4">
@@ -172,7 +172,7 @@
             </div>
           </div>
           <div
-            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp"
+            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp elem_hover"
             data-wow-delay="0.4s"
           >
             <div class="feature-item p-4">
@@ -190,7 +190,7 @@
             </div>
           </div>
           <div
-            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp"
+            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp elem_hover"
             data-wow-delay="0.6s"
           >
             <div class="feature-item p-4">
@@ -208,7 +208,7 @@
             </div>
           </div>
           <div
-            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp"
+            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp elem_hover"
             data-wow-delay="0.8s"
           >
             <div class="feature-item p-4">
@@ -235,7 +235,7 @@
       <div class="container py-5">
         <div class="row g-5">
           <div class="col-xl-6 wow fadeInLeft" data-wow-delay="0.2s">
-            <div class="about-img rounded h-100">
+            <div class="about-img rounded h-100 elem_hover">
               <img
                 src="img/aboutus.png"
                 class="img-fluid rounded h-100 w-100"
@@ -247,11 +247,11 @@
           </div>
           <div class="col-xl-6 wow fadeInRight" data-wow-delay="0.2s">
             <div class="about-item">
-              <h4 class="text-secondary text-uppercase">About Us</h4>
-              <h3 class="display-6 mb-3">
+              <h4 class="text-secondary text-uppercase elem_hover">About Us</h4>
+              <h3 class="display-6 mb-3 elem_hover">
                 Your Trusted Partner in Specialty Chemicals.
               </h3>
-              <p class="mb-4 text-justify">
+              <p class="mb-4 text-justify elem_hover">
                 Founded with a vision to drive chemical innovation,
                 <b>DCA Fine Chem Private Limited</b> has emerged as a trusted
                 name in the chemical manufacturing sector. With decades of
@@ -260,10 +260,10 @@
                 applications.
               </p>
               <div class="row">
-                <div class="col-6">
+                <div class="col-lg-6 p-2 elem_hover">
                   <div class="bg-light rounded p-2">
                     <div class="row">
-                      <div class="col-12">
+                      <div class="col-6">
                         <div class="d-flex">
                           <div class="pe-4">
                             <div
@@ -283,7 +283,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6 elem_hover">
                   <div class="bg-light rounded p-2">
                     <div class="row">
                       <div class="col-12">
@@ -309,7 +309,7 @@
               </div>
               <br />
               <div class="row">
-                <div class="col-6">
+                <div class="col-lg-6 p-2 elem_hover">
                   <div class="bg-light rounded p-2">
                     <div class="row">
                       <div class="col-12">
@@ -334,7 +334,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6 elem_hover">
                   <div class="bg-light rounded p-2">
                     <div class="row">
                       <div class="col-12">
@@ -370,7 +370,7 @@
       <div class="container py-5">
         <div class="row g-5">
           <div
-            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp"
+            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp elem_hover"
             data-wow-delay="0.2s"
           >
             <div class="counter-item">
@@ -387,7 +387,7 @@
             </div>
           </div>
           <div
-            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp"
+            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp elem_hover"
             data-wow-delay="0.4s"
           >
             <div class="counter-item">
@@ -404,7 +404,7 @@
             </div>
           </div>
           <div
-            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp"
+            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp elem_hover"
             data-wow-delay="0.6s"
           >
             <div class="counter-item">
@@ -421,7 +421,7 @@
             </div>
           </div>
           <div
-            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp"
+            class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp elem_hover"
             data-wow-delay="0.8s"
           >
             <div class="counter-item">
@@ -450,14 +450,16 @@
           data-wow-delay="0.2s"
           style="max-width: 800px"
         >
-          <h4 class="text-uppercase text-secondary">Industries We Serve</h4>
-          <h3 class="display-6 text-capitalize mb-3">
+          <h4 class="text-uppercase text-secondary elem_hover">
+            Industries We Serve
+          </h4>
+          <h3 class="display-6 text-capitalize mb-3 elem_hover">
             Trusted Chemical Solutions for a Variety of Industries
           </h3>
         </div>
         <div class="row gx-0 gy-4 align-items-center">
           <div class="col-lg-6 col-xl-4 wow fadeInLeft" data-wow-delay="0.2s">
-            <div class="service-item rounded p-4 mb-4">
+            <div class="service-item rounded p-4 mb-4 elem_hover">
               <div class="row">
                 <div class="col-12">
                   <div class="d-flex">
@@ -480,7 +482,7 @@
                 </div>
               </div>
             </div>
-            <div class="service-item rounded p-4 mb-4">
+            <div class="service-item rounded p-4 mb-4 elem_hover">
               <div class="row">
                 <div class="col-12">
                   <div class="d-flex">
@@ -509,7 +511,7 @@
             </div>
           </div>
           <div class="col-lg-6 col-xl-4 wow fadeInRight" data-wow-delay="0.2s">
-            <div class="service-item rounded p-4 mb-4">
+            <div class="service-item rounded p-4 mb-4 elem_hover">
               <div class="row">
                 <div class="col-12">
                   <div class="d-flex">
@@ -530,7 +532,7 @@
                 </div>
               </div>
             </div>
-            <div class="service-item rounded p-4 mb-4">
+            <div class="service-item rounded p-4 mb-4 elem_hover">
               <div class="row">
                 <div class="col-12">
                   <div class="d-flex">
@@ -565,13 +567,15 @@
           data-wow-delay="0.2s"
           style="max-width: 800px"
         >
-          <h4 class="text-uppercase text-secondary">Why Choose Us</h4>
-          <h3 class="display-6 text-capitalize mb-3">
+          <h4 class="text-uppercase text-secondary elem_hover">
+            Why Choose Us
+          </h4>
+          <h3 class="display-6 text-capitalize mb-3 elem_hover">
             Our Commitment to Quality, Service, and Partnerships
           </h3>
         </div>
         <div class="row g-4 justify-content-center">
-          <div class="col-lg-3 wow fadeInUp" data-wow-delay="0.2s">
+          <div class="col-lg-3 wow fadeInUp elem_hover" data-wow-delay="0.2s">
             <div class="blog-item">
               <div class="blog-img">
                 <img
@@ -587,7 +591,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 wow fadeInUp" data-wow-delay="0.4s">
+          <div class="col-lg-3 wow fadeInUp elem_hover" data-wow-delay="0.4s">
             <div class="blog-item">
               <div class="blog-img">
                 <img
@@ -603,7 +607,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 wow fadeInUp" data-wow-delay="0.6s">
+          <div class="col-lg-3 wow fadeInUp elem_hover" data-wow-delay="0.6s">
             <div class="blog-item">
               <div class="blog-img">
                 <img
@@ -619,7 +623,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 wow fadeInUp" data-wow-delay="0.6s">
+          <div class="col-lg-3 wow fadeInUp elem_hover" data-wow-delay="0.6s">
             <div class="blog-item">
               <div class="blog-img">
                 <img
@@ -643,7 +647,7 @@
 
     <!-- Footer Start -->
     <div
-      class="container-fluid footer py-2 wow fadeIn counter"
+      class="container-fluid footer py-2 wow fadeIn counter bg-image"
       data-wow-delay="0.2s"
     >
       <div class="container py-5">
@@ -653,22 +657,22 @@
               class="d-flex align-items-center justify-content-center justify-content-lg-end"
             >
               <a
-                class="btn btn-secondary btn-md-square rounded-circle me-3"
+                class="btn btn-secondary btn-md-square rounded-circle me-3 elem_hover"
                 href=""
                 ><i class="fab fa-facebook-f"></i
               ></a>
               <a
-                class="btn btn-secondary btn-md-square rounded-circle me-3"
+                class="btn btn-secondary btn-md-square rounded-circle me-3 elem_hover"
                 href=""
                 ><i class="fab fa-twitter"></i
               ></a>
               <a
-                class="btn btn-secondary btn-md-square rounded-circle me-3"
+                class="btn btn-secondary btn-md-square rounded-circle me-3 elem_hover"
                 href=""
                 ><i class="fab fa-instagram"></i
               ></a>
               <a
-                class="btn btn-secondary btn-md-square rounded-circle me-0"
+                class="btn btn-secondary btn-md-square rounded-circle me-0 elem_hover"
                 href=""
                 ><i class="fab fa-linkedin-in"></i
               ></a>
@@ -684,8 +688,8 @@
           <div class="col-md-6 col-lg-6 col-xl-3">
             <div class="footer-item d-flex flex-column">
               <div class="footer-item">
-                <h3 class="text-white mb-4">DCA</h3>
-                <p class="mb-3 text-justify">
+                <h3 class="text-white mb-4 elem_hover">DCA</h3>
+                <p class="mb-3 text-justify text-white elem_hover">
                   Backed by a strong foundation of innovation, precision, and
                   commitment to excellence, our solutions empower industries to
                   achieve optimal performance and sustainability. We bring
@@ -697,31 +701,42 @@
           </div>
           <div class="col-md-6 col-lg-6 col-xl-3">
             <div class="footer-item d-flex flex-column ms-5">
-              <h4 class="text-white mb-4">Explore</h4>
-              <a href="#"><i class="fas fa-angle-right me-2"></i>Home</a>
-              <a href="#"><i class="fas fa-angle-right me-2"></i> About</a>
-              <a href="#"><i class="fas fa-angle-right me-2"></i>services</a>
-              <a href="#"><i class="fas fa-angle-right me-2"></i> Contact</a>
+              <h4 class="text-white mb-4 elem_hover">Explore</h4>
+              <a href="#"
+                ><i class="fas fa-angle-right me-2 text-white elem_hover"></i
+                ><span class="text-white">Home</span></a
+              >
+              <a href="#"
+                ><i class="fas fa-angle-right me-2 text-white elem_hover"></i
+                ><span class="text-white">About</span></a
+              >
+              <a href="#"
+                ><i class="fas fa-angle-right me-2 text-white elem_hover"></i
+                ><span class="text-white">services</span></a
+              >
+              <a href="#"
+                ><i class="fas fa-angle-right me-2 text-white elem_hover"></i
+                ><span class="text-white"> Contact</span></a
+              >
             </div>
           </div>
           <div class="col-md-6 col-lg-6 col-xl-3">
             <div class="footer-item d-flex flex-column">
-              <h4 class="text-white mb-4">Contact Info</h4>
+              <h4 class="text-white mb-4 elem_hover">Contact Info</h4>
               <a href="#"
-                ><i class="fa fa-map-marker-alt me-2"></i> 123 Street, New York,
-                USA</a
+                ><i class="fa fa-map-marker-alt me-2 text-white"></i
+                ><span class="text-white">
+                  1DCA Fine Chem Pvt. Ltd. (Plot No. N-17, MIDC, Tarapur,
+                  Boisar, Tal.&DistPalghar 401506 )
+                </span></a
               >
               <a href="mailto:info@example.com"
-                ><i class="fas fa-envelope me-2"></i> info@example.com</a
-              >
-              <a href="mailto:info@example.com"
-                ><i class="fas fa-envelope me-2"></i> info@example.com</a
+                ><i class="fas fa-envelope me-2 text-white"></i
+                ><span class="text-white">info@dcafinechem.com</span></a
               >
               <a href="tel:+012 345 67890"
-                ><i class="fas fa-phone me-2"></i> +012 345 67890</a
-              >
-              <a href="tel:+012 345 67890" class="mb-3"
-                ><i class="fas fa-print me-2"></i> +012 345 67890</a
+                ><i class="fas fa-phone me-2 text-white"></i
+                ><span class="text-white">+91-9860324431</span></a
               >
             </div>
           </div>
