--- a/service.html
+++ b/service.html
@@ -59,7 +59,7 @@
       <nav
         class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0"
       >
-        <a href="" class="navbar-brand p-0">
+        <a href="index.html" class="navbar-brand p-0">
           <!-- <h1 class="text-primary"><i class="fas fa-hand-holding-water me-3"></i>Acuas</h1> -->
           <img src="img/logo.png" alt="Logo" />
         </a>
@@ -85,13 +85,13 @@
       <div class="container-fluid bg-breadcrumb">
         <div class="container text-center py-5" style="max-width: 900px">
           <h4
-            class="text-white display-4 mb-4 wow fadeInDown"
+            class="text-white display-4 mb-4 wow fadeInDown elem_hover"
             data-wow-delay="0.1s"
           >
             Our Services
           </h4>
           <ol
-            class="breadcrumb d-flex justify-content-center mb-0 wow fadeInDown"
+            class="breadcrumb d-flex justify-content-center mb-0 wow fadeInDown elem_hover"
             data-wow-delay="0.3s"
           >
             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
@@ -110,11 +110,11 @@
         <div class="row g-5">
           <div class="col-xl-6 wow fadeInLeft" data-wow-delay="0.2s">
             <div class="about-item">
-              <h4 class="text-secondary text-uppercase">Our Services</h4>
-              <h4 class="mb-3">
+              <h4 class="text-secondary text-uppercase elem_hover">Our Services</h4>
+              <h4 class="mb-3 elem_hover">
                 Innovative Chemical Solutions for Evolving Industrial Needs
               </h4>
-              <p class="mb-4 text-justify">
+              <p class="mb-4 text-justify elem_hover">
                 At DCA Fine Chem Pvt. Ltd., we offer a diverse portfolio of fine
                 chemicals, intermediates, and specialty compounds tailored for
                 industries like pharmaceuticals, agriculture, and industrial
@@ -126,15 +126,15 @@
           </div>
           <div class="col-xl-6 wow fadeInRight" data-wow-delay="0.2s">
             <div class="about-item">
-              <h4 class="text-secondary text-uppercase">Product Portfolio</h4>
-              <h4 class="mb-3">
+              <h4 class="text-secondary text-uppercase elem_hover">Product Portfolio</h4>
+              <h4 class="mb-3 elem_hover">
                 We supply high-purity intermediates that support drug
                 formulation and production efficiency
               </h4>
               <div class="row">
                 <div class="col-md-6">
-                  <h5 class="text-secondary">Pharma Intermediates</h5>
-                  <ul class="text-primary">
+                  <h5 class="text-secondary elem_hover">Pharma Intermediates</h5>
+                  <ul class="text-primary elem_hover">
                     <li>
                       <span style="color: gray">Phosphoric Acid 118%</span>
                     </li>
@@ -147,8 +147,8 @@
                   </ul>
                 </div>
                 <div class="col-md-6">
-                  <h5 class="text-secondary">Agro Chemicals</h5>
-                  <ul class="text-primary">
+                  <h5 class="text-secondary elem_hover">Agro Chemicals</h5>
+                  <ul class="text-primary elem_hover">
                     <li>
                       <span style="color: gray">Phosphoric Acid 118%</span>
                     </li>
@@ -176,17 +176,17 @@
           data-wow-delay="0.2s"
           style="max-width: 800px"
         >
-          <h4 class="text-uppercase text-secondary">
+          <h4 class="text-uppercase text-secondary elem_hover">
             Quality & Certifications
           </h4>
-          <h4 class="text-capitalize mb-3 text-white">
+          <h4 class="text-capitalize mb-3 text-white elem_hover">
             We are committed to upholding uncompromising quality standards to
             meet both domestic and international regulations.
           </h4>
         </div>
         <div class="row wow fadeInUp" data-wow-delay="0.3s">
           <div class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-4 p-2 elem_hover">
               <div class="bg-light rounded p-2">
                 <div class="row">
                   <div class="col-12">
@@ -209,7 +209,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-lg-4 p-2 elem_hover">
               <div class="bg-light rounded p-2">
                 <div class="row">
                   <div class="col-12">
@@ -230,7 +230,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-lg-4 p-2 elem_hover">
               <div class="bg-light rounded p-2">
                 <div class="row">
                   <div class="col-12">
@@ -265,13 +265,13 @@
           data-wow-delay="0.2s"
           style="max-width: 800px"
         >
-          <h4 class="text-uppercase text-secondary">Sustainability & Environmental Responsibility</h4>
-          <h5 class="text-capitalize mb-3">
+          <h4 class="text-uppercase text-secondary elem_hover">Sustainability & Environmental Responsibility</h4>
+          <h5 class="text-capitalize mb-3 elem_hover">
            Sustainable chemistry is at the heart of our operations. We actively pursue cleaner processes and efficient waste management practices
           </h5>
         </div>
         <div class="row g-4">
-          <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp"
+          <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp elem_hover"
             data-wow-delay="0.2s"
           >
             <div class="feature-item p-4">
@@ -283,7 +283,7 @@
               >
             </div>
           </div>
-          <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp"
+          <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp elem_hover"
             data-wow-delay="0.4s"
           >
             <div class="feature-item p-4">
@@ -295,7 +295,7 @@
               >
             </div>
           </div>
-          <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp"
+          <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp elem_hover"
             data-wow-delay="0.6s"
           >
             <div class="feature-item p-4">
@@ -307,7 +307,7 @@
               >
             </div>
           </div>
-          <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp"
+          <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp elem_hover"
             data-wow-delay="0.8s"
           >
             <div class="feature-item p-4">
@@ -332,14 +332,14 @@
           data-wow-delay="0.2s"
           style="max-width: 800px"
         >
-          <h4 class="text-uppercase text-secondary">IResearch & Development (R&D)</h4>
-          <h5 class=" text-capitalize mb-3">
+          <h4 class="text-uppercase text-secondary elem_hover">IResearch & Development (R&D)</h4>
+          <h5 class=" text-capitalize mb-3 elem_hover">
            Innovation drives our ability to deliver customized and forward-thinking chemical solutions.
           </h5>
         </div>
         <div class="row gx-0 gy-4 align-items-center">
           <div class="col-lg-6 col-xl-4 wow fadeInLeft" data-wow-delay="0.2s">
-            <div class="service-item rounded p-4 mb-4">
+            <div class="service-item rounded p-4 mb-4 elem_hover">
               <div class="row">
                 <div class="col-12">
                   <div class="d-flex">
@@ -359,7 +359,7 @@
                 </div>
               </div>
             </div>
-            <div class="service-item rounded p-4 mb-4">
+            <div class="service-item rounded p-4 mb-4 elem_hover">
               <div class="row">
                 <div class="col-12">
                   <div class="d-flex">
@@ -384,7 +384,7 @@
             </div>
           </div>
           <div class="col-lg-6 col-xl-4 wow fadeInRight" data-wow-delay="0.2s">
-            <div class="service-item rounded p-4 mb-4">
+            <div class="service-item rounded p-4 mb-4 elem_hover">
               <div class="row">
                 <div class="col-12">
                   <div class="d-flex">
@@ -402,7 +402,7 @@
                 </div>
               </div>
             </div>
-            <div class="service-item rounded p-4 mb-4">
+            <div class="service-item rounded p-4 mb-4 elem_hover">
               <div class="row">
                 <div class="col-12">
                   <div class="d-flex">
@@ -428,7 +428,7 @@
 
     <!-- Footer Start -->
     <div
-      class="container-fluid footer py-2 wow fadeIn counter"
+      class="container-fluid footer py-2 wow fadeIn counter bg-image"
       data-wow-delay="0.2s"
     >
       <div class="container py-5">
@@ -438,22 +438,22 @@
               class="d-flex align-items-center justify-content-center justify-content-lg-end"
             >
               <a
-                class="btn btn-secondary btn-md-square rounded-circle me-3"
+                class="btn btn-secondary btn-md-square rounded-circle me-3 elem_hover"
                 href=""
                 ><i class="fab fa-facebook-f"></i
               ></a>
               <a
-                class="btn btn-secondary btn-md-square rounded-circle me-3"
+                class="btn btn-secondary btn-md-square rounded-circle me-3 elem_hover"
                 href=""
                 ><i class="fab fa-twitter"></i
               ></a>
               <a
-                class="btn btn-secondary btn-md-square rounded-circle me-3"
+                class="btn btn-secondary btn-md-square rounded-circle me-3 elem_hover"
                 href=""
                 ><i class="fab fa-instagram"></i
               ></a>
               <a
-                class="btn btn-secondary btn-md-square rounded-circle me-0"
+                class="btn btn-secondary btn-md-square rounded-circle me-0 elem_hover"
                 href=""
                 ><i class="fab fa-linkedin-in"></i
               ></a>
@@ -469,8 +469,8 @@
           <div class="col-md-6 col-lg-6 col-xl-3">
             <div class="footer-item d-flex flex-column">
               <div class="footer-item">
-                <h3 class="text-white mb-4">DCA</h3>
-                <p class="mb-3 text-justify">
+                <h3 class="text-white mb-4 elem_hover">DCA</h3>
+                <p class="mb-3 text-justify text-white elem_hover">
                   Backed by a strong foundation of innovation, precision, and
                   commitment to excellence, our solutions empower industries to
                   achieve optimal performance and sustainability. We bring
@@ -482,31 +482,42 @@
           </div>
           <div class="col-md-6 col-lg-6 col-xl-3">
             <div class="footer-item d-flex flex-column ms-5">
-              <h4 class="text-white mb-4">Explore</h4>
-              <a href="#"><i class="fas fa-angle-right me-2"></i>Home</a>
-              <a href="#"><i class="fas fa-angle-right me-2"></i> About</a>
-              <a href="#"><i class="fas fa-angle-right me-2"></i>services</a>
-              <a href="#"><i class="fas fa-angle-right me-2"></i> Contact</a>
+              <h4 class="text-white mb-4 elem_hover">Explore</h4>
+              <a href="#"
+                ><i class="fas fa-angle-right me-2 text-white elem_hover"></i
+                ><span class="text-white">Home</span></a
+              >
+              <a href="#"
+                ><i class="fas fa-angle-right me-2 text-white elem_hover"></i
+                ><span class="text-white">About</span></a
+              >
+              <a href="#"
+                ><i class="fas fa-angle-right me-2 text-white elem_hover"></i
+                ><span class="text-white">services</span></a
+              >
+              <a href="#"
+                ><i class="fas fa-angle-right me-2 text-white elem_hover"></i
+                ><span class="text-white"> Contact</span></a
+              >
             </div>
           </div>
           <div class="col-md-6 col-lg-6 col-xl-3">
             <div class="footer-item d-flex flex-column">
-              <h4 class="text-white mb-4">Contact Info</h4>
+              <h4 class="text-white mb-4 elem_hover">Contact Info</h4>
               <a href="#"
-                ><i class="fa fa-map-marker-alt me-2"></i> 123 Street, New York,
-                USA</a
+                ><i class="fa fa-map-marker-alt me-2 text-white"></i
+                ><span class="text-white">
+                  1DCA Fine Chem Pvt. Ltd. (Plot No. N-17, MIDC, Tarapur,
+                  Boisar, Tal.&DistPalghar 401506 )
+                </span></a
               >
               <a href="mailto:info@example.com"
-                ><i class="fas fa-envelope me-2"></i> info@example.com</a
-              >
-              <a href="mailto:info@example.com"
-                ><i class="fas fa-envelope me-2"></i> info@example.com</a
+                ><i class="fas fa-envelope me-2 text-white"></i
+                ><span class="text-white">info@dcafinechem.com</span></a
               >
               <a href="tel:+012 345 67890"
-                ><i class="fas fa-phone me-2"></i> +012 345 67890</a
-              >
-              <a href="tel:+012 345 67890" class="mb-3"
-                ><i class="fas fa-print me-2"></i> +012 345 67890</a
+                ><i class="fas fa-phone me-2 text-white"></i
+                ><span class="text-white">+91-9860324431</span></a
               >
             </div>
           </div>
